Issue #15596: Faster pickling of unicode strings.